[package]
name = "lissajous"
version = "0.1.0"
authors = ["Nico Chatzi <nico.chatzigianis@focusrite.com>"]
edition = "2018"

[dependencies]
nannou = "0.15.0"
nannou_audio = "0.15.0"
modulator = "0.1.0"
lazy_static = "1.4.0"
rume = { git = "https://github.com/nicochatzi/rume", branch = "main" }
heapless = "0.5.6"
rand = "0.7"